Added runtime data analysis

--- a/final/chromatic.tex
+++ b/final/chromatic.tex
@@ -648,7 +648,7 @@ to \(20\) (due to increased runtime duration).
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=5in]{christofides_states}
+  \includegraphics[width=5in]{christofides_calls}
   \caption{Christofides algorithm mean number of states.}
   \label{fig:cfstates}
 \end{figure}
