--- a/final/random.tex
+++ b/final/random.tex
@@ -1,2 +1,15 @@
 \section{Random Graph Analysis}\label{sec:random}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=5in]{qz_steps}
+  \caption{Proposed algorithm mean number of steps.}
+  \label{fig:qzsteps}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=5in]{qz_runtime}
+  \caption{Proposed algorithm runtime complexity.}
+  \label{fig:qzruntime}
+\end{figure}
