--- a/final/references.bib
+++ b/final/references.bib
@@ -1,3 +1,9 @@
+@misc{bell,
+  title={The Online Encyclopedia of Integer Sequences: A000110},
+  howpublished={\url{https://oeis.org/A000110}},
+  note={Accessed: 2019-12-29}
+}
+
 @article{bron,
   author={Bron, Coen and Kerbosch, Joep},
   title={Algorithm 457: Finding All Cliques of an Undirected Graph},
